--- a/index.html
+++ b/index.html
@@ -30,21 +30,21 @@
    
     <main class="content">
         <article class="search-engine-optimization" id="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" alt="A desk with a laptop, coffee cup, notebook, and a mug full of colored pencils." class="float-left" />
+            <img src="./assets/images/search-engine-optimization.jpg" alt="A desk with a laptop, coffee cup, notebook, and a mug full of colored pencils. The notebook has 'SEO' in a cloud in the middle with multiple components surrounding it such as: Social media, mobile compatibility, etc." class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </article>
         <article class="online-reputation-management" id="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" alt="online-reputation-management.jpg" class="float-right" />
+            <img src="./assets/images/online-reputation-management.jpg" alt="A person checking their phone and on a laptop that shows a chart of reputation with a rising bar graph and two pie charts." class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </article>
         <article class="social-media-marketing" id="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" alt="social-media-marketing.jpg" class="float-left" />
+            <img src="./assets/images/social-media-marketing.jpg" alt="Multiple people with laptops and tablets at a table collaborating and sharing ideas." class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
@@ -55,21 +55,21 @@
     <section class="benefits">
         <aside class="benefit-lead">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" alt="lead-generation.png"/>
+            <img src="./assets/images/lead-generation.png" alt="A gear going into a funnel and turning into a coin with a dollar sign on it."/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </aside>
         <aside class="benefit-brand">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" alt="brand-awareness.png"/>
+            <img src="./assets/images/brand-awareness.png" alt="A shining light bulb with a human upper body and a tie."/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </aside>
         <aside class="benefit-cost">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" alt="cost-management.png"/></img>
+            <img src="./assets/images/cost-management.png" alt="A gear surrounded by multiple coins with dollar signs in them."/></img>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
