--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </nav>
     </header>
     
-    <section class="hero">
+    <section class="hero" alt="Image of four people around a table working through an issue.">
     </section>
    
     <main class="content">
